--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
 
 a {
     color: inherit;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 
 h1, h2, h3, h4, h5 {
